--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.25.0",
     "react": "^17.0.2",
+    "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.26.1",
+    "react-link-text": "^0.4.0",
     "react-scripts": "5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
